--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -2,6 +2,9 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb' and 'couchdb'
     firewall_name: main
     user_class: App\Entity\Usuari
+    registration:
+        form:
+            type: App\Form\RegistrationFormType
     from_email:
         address: "barbaramaria_lopezpamias@iescarlesvallbona.cat"
         sender_name: "barbaramaria_lopezpamias@iescarlesvallbona.cat"
