--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,8 +4,8 @@ security:
         FOS\UserBundle\Model\UserInterface: bcrypt
     role_hierarchy:
         ROLE_STUDENT: ROLE_USER
-        ROLE_TEACHER: ROLE_USER
-        ROLE_ADMIN:       ROLE_USER
+        ROLE_TEACHER: ROLE_STUDENT
+        ROLE_ADMIN:       ROLE_TEACHER
         ROLE_SUPER_ADMIN: ROLE_ADMIN
     providers:
         fos_userbundle:
