--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "ext-iconv": "*",
         "friendsofsymfony/user-bundle": "~2.0",
         "sensio/framework-extra-bundle": "^5.1",
-        "symfony/asset": "*",
+        "symfony/asset": "4.2.*",
         "symfony/console": "*",
         "symfony/dotenv": "*",
         "symfony/expression-language": "*",
