--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,8 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     encoders:
-        FOS\UserBundle\Model\UserInterface: bcrypt
+        FOS\UserBundle\Model\UserInterface: 
+            algorithm: bcrypt
     role_hierarchy:
         ROLE_STUDENT: ROLE_USER
         ROLE_TEACHER: ROLE_STUDENT
