--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,6 +25,11 @@ security:
                 target: /login
             anonymous: true
 
+            remember_me:
+                secret:   '%kernel.secret%'
+                lifetime: 604800 # 1 week in seconds
+                path:     /
+
             # activate different ways to authenticate
 
             # http_basic: true
