--- a/.env
+++ b/.env
@@ -33,4 +33,5 @@ DATABASE_URL=mysql://root@127.0.0.1:3306/trivial
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=gmail://ub.trivial@gmail.com:trivial2019@localhost
+MAIL_TRIVIAL=ub.trivial@gmail.com
 ###< symfony/swiftmailer-bundle ###
