--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -5,6 +5,9 @@ fos_user:
     registration:
         form:
             type: App\Form\RegistrationFormType
+    profile:
+        form:
+            type: App\Form\ProfileFormType
     from_email:
         address: "barbaramaria_lopezpamias@iescarlesvallbona.cat"
         sender_name: "barbaramaria_lopezpamias@iescarlesvallbona.cat"
