--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -1,5 +1,5 @@
 framework:
-    default_locale: '%locale%'
+    default_locale: ca
     translator:
         default_path: '%kernel.project_dir%/translations'
         fallbacks:
